feat: Complete RBAC, backup/restore, invoice enhancements, product images
- Add User model with admin/user roles and authentication (login/logout)
- Implement optional login system (guest access as user, admin login for full access)
- Add backup and restore functionality with customizable paths
- Enhance invoice with patient info, product details, instructions, dosage, follow-up dates
- Add product images (imageUrl field) for all products
- Support both lenses and frames selection in refraction page
- Add Plano (0.00) option for SPH/CYL ranges
- Add patient visit purpose transition (examination <-> refraction)
- Fix schema to support multi-purpose visits (comma-separated values)
- Update seed data with 5 patients, 15 products (with images), settings
- Fix Prisma client singleton pattern for shared instance across routes
- Fix deprecated Ant Design Card bordered prop to variant

--- a/phongkham/apps/server/package.json
+++ b/phongkham/apps/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "prestart": "prisma generate && prisma db push",
+    "prestart": "prisma db push --skip-generate",
     "start": "node src/index.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
