--- a/phongkham/dist-portable/app/package.json
+++ b/phongkham/dist-portable/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eye-clinic-server",
   "version": "0.1.0",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist-bundle/index.cjs",
   "bin": "dist-bundle/index.cjs",
   "scripts": {
